# dakara-server

./: .appveyor.yml  .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  bump_version.sh  config.ini.example  config.yaml.example  create_archive.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: ci.yml
dakara_server/: .travis.yml  conftest.py  manage.py  pytest.ini
dakara_server/dakara_server/: asgi.py  default_settings.py  local_settings.py.example  routing.py  settings.py  token_auth.py  urls.py  version.py  wsgi.py
dakara_server/dakara_server/settings/: base.py  development.py  production.py  test.py
dakara_server/internal/: apps.py  cache_model.py  lock.py  pagination.py  permissions.py  tests.py  version.py  views.py
dakara_server/internal/tests/: __init__.py  base_test.py  test_cache_model.py  test_internal.py  test_lock.py  test_token_auth.py  test_version.py  test_views.py
dakara_server/playlist/: apps.py  authentications.py  base_test.py  communications.py  conftest.py  consumers.py  date_stop.py  models.py  permissions.py  pytests_device.py  routing.py  serializer.py  serializers.py  serializers_device.py  signals.py  tests_date_stop.py  tests_device.py  tests_digest.py  tests_kara_status.py  tests_karaoke.py  tests_models.py  tests_played_playlist_entry.py  tests_player.py  tests_player_command.py  tests_player_error.py  tests_player_status.py  tests_playlist_entry.py  views.py  views_device.py  views_front.py  views_player.py
dakara_server/playlist/management/commands/: createplayer.py
dakara_server/playlist/migrations/: 0001_initial.py  0002_auto_20170702_1549.py  0002_kara_status.py  0002_karastatus.py  0003_auto_20170709_1840.py  0003_auto_20180402_1443.py  0003_kara_status_status.py  0004_auto_20180402_1449.py  0004_playlist_entry_past.py  0005_auto_20180610_1705.py  0005_playererror.py  0005_playlistentry_had_error.py  0006_auto_20180722_1512.py  0006_karaoke.py  0006_playererror.py  0007_karaoke_date_stop.py  0008_player_error.py  0008_playererror.py  0009_auto_20190106_0734.py  0010_auto_20200329_1303.py  0010_karaoke_fk_cascade.py  0010_playlistentry_use_instrumental.py  0011_karaoke_channel_name.py  0011_playlistentry_use_instrumental.py  0012_playlist_entry_use_instrumental.py  0012_playlistentry_use_instrumental.py  0013_player.py  0013_playertoken.py  0014_playertoken.py  0016_playlist_entry_date_play.py
dakara_server/playlist/tests/: base_test.py  conftest.py  test_command_createplayer.py  test_consumers.py  test_date_stop.py  test_device.py  test_digest.py  test_karaoke.py  test_models.py  test_played_playlist_entry.py  test_player_command.py  test_player_error.py  test_player_status.py  test_player_token.py  test_playlist_entry.py  test_playlist_entry.py.orig  test_playlist_played.py  test_playlist_queuing.py
dakara_server/static/: dakara.css  dakara.js  info.txt  static.md
dakara_server/templates/: index.html  info.txt  templates.md
dakara_server/users/: apps.py  backend.py  backends.py  base_test.py  emails.py  fields.py  models.py  permissions.py  serializers.py  signals.py  tests.py  tests_models.py  views.py
dakara_server/users/management/commands/: creategroups.py
dakara_server/users/migrations/: 0001_initial.py  0002_auto_20170730_1432.py  0002_auto_20180518_1532.py  0002_dakara_user_username.py  0003_auto_20170730_1725.py  0003_auto_20181125_0834.py  0003_dakara_user_username.py  0004_auto_20200329_1303.py  0004_dakara_user_last_name.py  0005_auto_20201018_1106.py  0005_dakara_user_email.py  0006_auto_20201128_0833.py  0007_auto_20210523_1700.py  0007_dakara_user_case_insensitive_fields.py  0008_id_fields.py
dakara_server/users/templates/: notification_to_managers.txt
dakara_server/users/tests/: base_test.py  conftest.py  test_backend.py  test_backends.py  test_emails.py  test_models.py  test_views.py
hooks/: pre-commit
hooks/pre-commit.d/: 01_tests  01_tests_unittest  02_tests_pytest  03_black  03_flake8
src/: conftest.py
src/dakara_server/: __init__.py  routing.py  token_auth.py  wsgi.py
src/dakara_server/settings/: base.py  development.py  production.py
src/internal/: pagination.py  reloader.py  serializers.py  version.py  views.py
src/internal/tests/: base_test.py  models.py
src/playlist/: apps.py  authentications.py  date_stop.py  permissions.py  schemes.py  serializers.py  views.py
src/playlist/migrations/: 0005_playlist_entry_order.py  0007_karaoke_date_stop.py  0009_karaoke_boolean_fields.py  0014_player_token.py  0015_id_fields.py
src/playlist/tests/: base_test.py  conftest.py  test_date_stop.py  test_player_error.py
src/users/: apps.py  backends.py  fields.py  models.py  permissions.py  views.py
src/users/migrations/: 0001_initial.py  0006_dakara_user_playlist_permission_level.py
src/users/templates/: notification_to_user_validated.txt
src/users/tests/: test_emails.py  test_models.py
tools/: feed_database.py
