[project]
name = "dakaraserver"
authors = [
    {name = "Neraste", email = "neraste.herr10@gmail.com"},
]
description = "Server for the Dakara Project"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "APScheduler>=3.11.0,<3.12.0",
    "channels>=4.2.0,<4.3.0",
    "daphne>=4.1.2,<4.2.0",
    "dj-database-url>=2.3.0,<2.4.0",
    "django-cache-lock>=0.2.5,<0.3.0",
    "django-filter>=25.1,<25.2",
    "django-ordered-model>=3.7.4,<3.8.0",
    "django-rest-registration>=0.9.0,<0.10.0",
    "Django>=5.1.6,<5.2.0",
    "djangorestframework>=3.15.2,<3.16.0",
    "drf-spectacular==0.28.0",
    "packaging>=24.2,<24.3",
    "python-decouple>=3.8,<3.9",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<25.2.0",
    "codecov>=2.1.13,<2.2.0",
    "freezegun>=1.5.1,<1.6.0",
    "isort>=6.0.0,<6.1.0",
    "pre-commit>=4.1.0,<4.2.0",
    "pytest-asyncio>=0.25.3,<0.26.0",
    "pytest-cov>=6.0.0,<6.1.0",
    "pytest-django>=4.10.0,<4.11.0",
    "pytest-mock>=3.14.0,<3.15.0",
    "pytest>=8.3.4,<8.4.0",
    "ruff>=0.9.7,<0.10.0",
]
# note: update .pre-commit-config.yaml as well

[project.urls]
Homepage = "https://github.com/DakaraProject/dakara-server"
Repository = "https://github.com/DakaraProject/dakara-server.git"
Issues = "https://github.com/DakaraProject/dakara-server/issues"
Changelog = "https://github.com/DakaraProject/dakara-server/blob/master/CHANGELOG.md"

[project.scripts]
"dakara-server" = "dakara_server:django_manage"

[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "dakara_server.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ["*/tests/*", "*/conftest.py"]

[tool.pytest]
addopts = "--cov=dakara_server"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
known_first_party = [
    "dakara_server",
    "internal",
    "library",
    "playlist",
    "users",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = []
